test/expressions/noinit/recordHasTypeField.good
recordHasTypeField.chpl:12: error: the type of the actual argument 'bar' is generic
note: generic actual arguments are not currently supported
